--- a/src/App.css
+++ b/src/App.css
@@ -9,24 +9,11 @@
 }
 
 .App {
-  text-align: center;
-  color: var(--white);
   font-family: 'Montserrat', sans-serif;
-  text-align: left;
 }
 
-html {
-  height: 100vh;
-}
-
-html, body {
+body {
   background: var(--orange);
-}
-
-
-h1 {
-  font-size: 6rem;
-  font-weight: bold;
 }
 
 h2 {
@@ -63,342 +50,24 @@ a {
 /* Navbar */
 
 .navbar {
-  background: var(--orange) !important;
-}
-
-.nav-link {
-  font-weight: bold;
-}
-
-.logo {
-  list-style-type: none;
-}
-
-.logo-name {
-  color: white;
-  font-size: 36px;
-  margin: 0;
-}
-
-.nav-item {
-  padding: 0 10px;
-  margin-left: 10px;
-}
-
-.active {
-  background-color: white;
-  border-radius: 180px;
-  color: black;
-}
-
-.active .nav-link {
-  color: black !important;
+  background: var(--orange);
 }
 
 /* Home */
-
-#home-container {
-  height: calc(100vh - 133px);
+.test {
+  height: 100vh;
 }
 
-.hero-text {
-  margin-bottom: 50px;
-}
+/* Media Queries */
 
-.headline {
-  margin-left: -5px;
-  font-size: 5rem;
-}
-
-.headline-sub-text {
-  font-size: 1.3rem;
-  font-weight: 400;
-}
-
-#home-button {
-  margin-left: -2px;
-}
-
-.graphic {
-  height: 475px;
-  width: auto;
-}
-
-/* Portfolio */
-
-.portfolio {
-  background: var(--orange);
-}
-
-.portfolio-grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.portfolio-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* .portfolio-col {
-  flex: 50%;
-  max-width: 50%;
-}  */
-
-.portfolio-row {
-  width: 75%;
-}
-
-/* Portfolio animations */
-
-.hvr-bounce-to-bottom {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-}
-.hvr-bounce-to-bottom:before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: var(--blue);
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  -webkit-transform-origin: 50% 0;
-  transform-origin: 50% 0;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.hvr-bounce-to-bottom:hover, .hvr-bounce-to-bottom:focus, .hvr-bounce-to-bottom:active {
-  color: white;
-}
-.hvr-bounce-to-bottom:hover:before, .hvr-bounce-to-bottom:focus:before, .hvr-bounce-to-bottom:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-  -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-  transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-}
-
-.hvrbox,
-.hvrbox * {
-	box-sizing: border-box;
-}
-.hvrbox {
-	position: relative;
-	display: inline-block;
-	overflow: hidden;
-	max-width: 100%;
-	height: auto;
-}
-.hvrbox img {
-	max-width: 100%;
-}
-.hvrbox .hvrbox-layer_bottom {
-	display: block;
-}
-.hvrbox .hvrbox-layer_top {
-	opacity: 0;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
-	padding: 15px;
-	-moz-transition: all 0.4s ease-in-out 0s;
-	-webkit-transition: all 0.4s ease-in-out 0s;
-	-ms-transition: all 0.4s ease-in-out 0s;
-	transition: all 0.4s ease-in-out 0s;
-}
-.hvrbox:hover .hvrbox-layer_top,
-.hvrbox.active .hvrbox-layer_top {
-	opacity: 1;
-}
-.hvrbox .hvrbox-text {
-	text-align: center;
-	display: inline-block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-moz-transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-}
-.hvrbox .hvrbox-text_mobile {
-	font-size: 15px;
-	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
-	border-top: 1px solid rgba(179, 179, 179, 0.7);
-	margin-top: 5px;
-	padding-top: 2px;
-	display: none;
-}
-.hvrbox.active .hvrbox-text_mobile {
-	display: block;
-}
-
-.work-container {
-  height: calc(100vh - 133px);
-}
-
-/* Contact */
-.contact {
-  background: var(--orange);
-}
-
-#contact-container {
-  height: calc(100vh - 92px);
-  overflow: visible;
-}
-
-.mail-graphic {
-  max-width: 100%;
-}
-
-.sub-text {
-  font-weight: 400;
-}
-
-#contact-button {
-  width: 100%;
-}
-
-#contact-right {
-  padding: 25px;
-}
-
-.btn-primary.focus, .btn-primary:focus {
-  -webkit-box-shadow: none!important;
-  box-shadow: none!important;
-}
-
-.form-control:focus {
-  box-shadow: 0px 0px 5px var(--blue) !important;
- } 
-
- .form-label {
-   font-weight: 600;
-   font-size: 1.1rem;
- } 
-
-/* Media queries */
-@media (min-width: 1200px) {
-  .container{
-      max-width: 1024px;
-  }
-  .logo-name {
-    margin: auto;
-    text-align: center;
-    margin-left: 50px;
+@media (min-width: 768px) {
+  #home-graphic {
+    max-width: 75%;
   }
 }
 
-@media (max-width: 768px) {
-  /* Navbar */
-  .nav-container {
-    justify-content: space-around !important;
-  }
-
-  .nav-item {
-    margin-left: 0 !important;
-  }
-  .navbar-nav{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-top: 5px;
-  }
-
-  .logo-name {
-    font-size: 2rem;
-  }
-
-  /* Home */
-  #home-container {
-    height: calc(100vh - 154px);
-  }
-
-  .headline {
-    font-size: 3.5rem;
-    text-align: center;
-    margin-bottom: 0;
-    margin-top: 1rem !important;
-  }
-
-  .headline-sub-text {
-    text-align: center;
-    margin: 0 !important;
-    margin-top: 5px !important;
-  }
-
-  #home-button {
-    margin: 0 !important;
-    margin-top: 10px !important;
-    padding: 7px 14px;
-  }
-
-  .hero-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-  }
-  .graphic {
-    padding: 0 1rem;
-    height: auto;
-    width: 100%;
-    margin-top: 1rem !important;
-  }
-
-  .col-graphic {
-    height: auto !important;
-  }
-
-  /* Work */
-  .work-container {
-    height: calc(100vh - 154px);
-  }
-
-  .secondary-headline {
-    padding: 0px !important;
-    margin-top: 1rem;
-  }
-  .line {
-    margin-bottom: 2rem !important;
-  }
-  #portfolio-container {
-    padding: 0 !important;
-  }
-  .portfolio-row-bottom {
-    margin-bottom: 3rem !important;
-  }
-  .portfolio-col {
-    padding: 0 !important;
-  }
-  /* Contact */
-  .mail-graphic {
-    margin-bottom: 2.3rem !important;
+@media (min-width: 992px) {
+  #home-graphic {
+    max-width: 50%;
   }
 }
